# histogram

./: CHANGELOG.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md
.github/workflows/: site.yml
benches/: histogram.rs
docs/superpowers/plans/: 2026-04-26-u32-bucket-counts.md
docs/superpowers/specs/: 2026-04-26-u32-bucket-counts-design.md
examples/: rezolus_memory.rs
site/: .gitignore  astro.config.mjs  package-lock.json  package.json
site/src/: CNAME  index.html  template.html
site/src/components/: Calculator.svelte
site/src/layouts/: Page.astro
site/src/lib/: h2.ts
site/src/pages/: index.mdx
site/src/styles/: global.css
src/: atomic.rs  config.rs  conversions.rs  count.rs  cumulative.rs  errors.rs  lib.rs  quantile.rs  sparse.rs  standard.rs
